<?xml version="1.0"?>
<package format="2">
  <name>first_project</name>
  <version>0.0.0</version>
  <description>The first_project package</description>


  <maintainer email = "marco.scianna@mail.polimi.it">Marco Scianna</maintainer>
  <maintainer email = "alessio3.villa@mail.polimi.it">Alessio Villa</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
</package>
